--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     padding: 0;
+    font-family: "Jura", sans-serif;
 }
 
 /* Header */
@@ -12,8 +13,11 @@ body{
 }
 
 .title{
-    font-size: 1.5rem;
-    margin-top: 2.5rem;
+font-size: 1.5rem;
+margin-top: 2.5rem;
+ font-family: "Itim", cursive;
+ font-weight: bold;
+  
 }
 
 .header-intro{
@@ -25,6 +29,10 @@ body{
 
 /* Main, 3 cards */
 
+hr{
+   border: none; /* Remove default browser border */
+    border-top: 4px solid rgb(0, 0, 0); /* Create a blue solid line */
+}
 .cards {
   display: flex;
   flex-wrap: wrap;
@@ -49,6 +57,7 @@ body{
 .shop-name{
     font-size: 1.3rem;
     text-align: center;
+    font-weight: bold;
 }
 
 .shop-images{
@@ -76,6 +85,11 @@ flex-direction: column;
 align-items: center;
     background-color: grey;
     color: antiquewhite;
+}
+
+.portfolio{
+  text-decoration: none;
+  color: antiquewhite;
 }
 
 .founder{
@@ -198,5 +212,10 @@ align-items: center;
   .founder{
     font-size: 1.7rem;
   }
+
+  .portfolio:hover{
+border-bottom: 1.5px antiquewhite solid;
+  color: antiquewhite;
+}
 }
 
